# fetcharoo

./: .gitignore  FILTERING_EXAMPLES.md  README.md  pyproject.toml  test.py  test_filtering_demo.py
.github/workflows/: CI.yml  publish.yml  python-package.yml  test.yml
fetcharoo/: __init__.py  cli.py  downloader.py  fetcharoo.py
fetcharoo/schemas/: __init__.py  base.py  registry.py
pdf_scraper/: pdf_scraper.py  pdf_utils.py
scraperhero/: scraperhero.py
tests/: test_cli.py  test_cross_feature.py  test_downloader.py  test_dry_run.py  test_enhancements.py  test_error_handling.py  test_fetcharoo.py  test_file_utils.py  test_filtering.py  test_integration.py  test_pdf_scraper.py  test_pdf_utils.py  test_progress.py  test_robots.py  test_schemas_base.py  test_schemas_registry.py  test_scraperhero.py  test_security.py  test_user_agent.py
