[tool.poetry]
name = "fetcharoo"
version = "0.0.1"
description = "A Python library for downloading files from a webpage, with support for recursion depth and optional merging."
authors = ["Mark A. Lifson, Ph.D. <mlifson@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "fetcharoo"}]
exclude = ["tests/*"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
requests = "^2.32.3"
pymupdf = "^1.25.0"
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
responses = "^0.25.3"
coverage = "^7.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"